added postprocessing beginnings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "postprocessing": "^6.31.2",
     "textalive-app-api": "^0.3.2",
     "three": "^0.152.2",
     "vite": "^4.3.9"
