Began Animating with Tweenjs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tweenjs/tween.js": "^21.0.0",
     "postprocessing": "^6.32.1",
     "sass": "^1.63.6",
     "textalive-app-api": "^0.3.2",
