--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://khazure.github.io/MM-2023-Mutation/",
   "dependencies": {
     "@tweenjs/tween.js": "^21.0.0",
     "postprocessing": "^6.32.1",
@@ -6,5 +7,8 @@
     "textalive-app-api": "^0.3.2",
     "three": "^0.152.2",
     "vite": "^4.3.9"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
